# size_sorter_psql

./: package-lock.json
backend/: pyproject.toml  requirements.txt  size_sorter.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: size_sorter.vue
